tests/compile-fail/generated/derives-span-Default-enum.stderr
error[E0277]: the trait bound `Error: std::default::Default` is not satisfied
  --> $DIR/derives-span-Default-enum.rs:16:6
   |
16 |    A(Error)
   |      ^^^^^ the trait `std::default::Default` is not implemented for `Error`
   |
   = note: required by `std::default::Default::default`
